clusters/beryjuorg-defr/dl-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "dl-stack"
  labels:
    istio-injection: enabled
