clusters/beryjuorg-defr/dl-stack/sabnzbd-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  serviceName: "sabnzbd"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      containers:
        - name: exporter
          image: msroest/sabnzbd_exporter
          ports:
            - containerPort: 9387
              name: metrics
        - name: sabnzbd
          image: ghcr.io/k8s-at-home/sabnzbd:v3.3.1
          resources:
            requests:
              memory: "300Mi"
              cpu: "0.5"
            limits:
              memory: "750Mi"
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: https
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 1Gi
        accessModes:
          - ReadWriteOnce
