clusters/beryjuorg-defr/dl-stack/sabnzbd-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  serviceName: "sabnzbd"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: Always
      containers:
        - name: sabnzbd
          image: ghcr.io/k8s-at-home/sabnzbd:v3.6.0
          resources:
            requests:
              memory: "300Mi"
              cpu: "0.5"
            limits:
              memory: "750Mi"
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: https
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 1Gi
        accessModes:
          - ReadWriteOnce
