clusters/beryjuorg-defr/dl-stack/sabnzbd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: dl-stack
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  - port: 9387
    name: metrics
    targetPort: 9387
