clusters/beryjuorg-defr/dl-stack/ombi.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: ombi
  name: ombi
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ombi
  serviceName: "ombi"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ombi
    spec:
      containers:
      - name: ombi
        image: linuxserver/ombi:v4-preview
        resources:
          requests:
            memory: "200Mi"
          limits:
            memory: "300Mi"
        ports:
        - containerPort: 3579
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      resources:
        requests:
          storage: 1Gi
      accessModes:
        - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: dl-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ombi
  ports:
  - port: 3579
    targetPort: 3579
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ombi
  namespace: dl-stack
spec:
  rules:
  - host: ombi.defr.k8s.beryju.org
    http:
      paths:
      - backend:
          serviceName: ombi
          servicePort: 3579
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ombi.defr.k8s.beryju.org
    secretName: ombi-acme
