clusters/beryjuorg-defr/dl-stack/radarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  serviceName: "radarr"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        io.jela.stack: dl
    spec:
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr
        resources:
          requests:
            memory: "250Mi"
          limits:
            memory: "350Mi"
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      resources:
        requests:
          storage: 1Gi
      accessModes:
        - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: dl-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
  ports:
  - port: 7878
    targetPort: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: radarr
  namespace: dl-stack
spec:
  rules:
  - host: radarr.defr.k8s.beryju.org
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 7878
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - radarr.defr.k8s.beryju.org
    secretName: radarr-acme
