clusters/beryjuorg-defr/dl-stack/sabnzbd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sabnzbd
  namespace: dl-stack
spec:
  rules:
  - host: sabnzbd.defr.k8s.beryju.org
    http:
      paths:
      - backend:
          service:
            name: sabnzbd
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sabnzbd.defr.k8s.beryju.org
    secretName: sabnzbd-acme
