clusters/beryjuorg-defr/dl-stack/sonarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  serviceName: "sonarr"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        io.jela.stack: dl
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: io.jela.stack
                operator: In
                values:
                - dl
            topologyKey: kubernetes.io/hostname
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr
        resources:
          requests:
            memory: "250Mi"
          limits:
            memory: "350Mi"
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      resources:
        requests:
          storage: 1Gi
      accessModes:
        - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: dl-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
  ports:
  - port: 8989
    targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sonarr
  namespace: dl-stack
spec:
  rules:
  - host: sonarr.defr.k8s.beryju.org
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 8989
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sonarr.defr.k8s.beryju.org
    secretName: sonarr-acme
